--- a/.rubocop.yml
+++ b/.rubocop.yml
@@ -1,6 +1,6 @@
 AllCops:
   Exclude:
     - 'lib/protos'
-    - 'lib/winden/api_pb.rb'
-    - 'lib/winden/api_services_pb.rb'
+    - 'lib/graphd/api_pb.rb'
+    - 'lib/graphd/api_services_pb.rb'
   TargetRubyVersion: 2.7
